--- a/presenca/lista_visitantes.html
+++ b/presenca/lista_visitantes.html
@@ -310,6 +310,16 @@ function mostrarDetalhes(id, date) {
 
 
   //parte 3
+function montarEndereco(v) {
+  let endereco = v.endereco || '';
+  if (v.numero) endereco += ', N° ' + v.numero;
+  if (v.bairro) endereco += ', ' + v.bairro;
+  if (v.cidade) endereco += ', ' + v.cidade;
+  if (v.estado) endereco += ', ' + v.estado;
+  if (v.cep) endereco += ', CEP: ' + v.cep;
+  return endereco.trim() || 'Não informado';
+}
+
 function exportarPDF(data, visitantes) {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF({ orientation: 'landscape' });
@@ -318,11 +328,10 @@ function exportarPDF(data, visitantes) {
 
   adicionarCabecalho(doc, yPos, data, () => {
     const rows = visitantes.map(v => {
-      const enderecoCompleto = 
-        `${v.endereco || ''}${v.numero ? ', N° ' + v.numero : ''}${v.bairro ? ', ' + v.bairro : ''}, ${v.cidade || ''}, ${v.estado || ''}${v.cep ? ', CEP: ' + v.cep : ''}`;
+      const enderecoCompleto = montarEndereco(v);
       return [
         v.nome || 'Não informado',
-        enderecoCompleto || 'Não informado',
+        enderecoCompleto,
         v.cristao || 'Não informado',
         v.telefone || 'Não informado',
         formatarDataSimples(data)
@@ -343,9 +352,6 @@ function exportarPDF(data, visitantes) {
         2: { cellWidth: 20 },    // É Cristão
         3: { cellWidth: 40 },    // Telefone
         4: { cellWidth: 30 }     // Data da Visita
-      },
-      didDrawPage: () => {
-        adicionarRodape(doc);
       }
     });
 
@@ -366,11 +372,10 @@ function exportarPeriodo() {
 
       const visitantes = Object.values(data.presentes || {}).filter(v => typeof v === 'object' && v.nome);
       visitantes.forEach(v => {
-        const enderecoCompleto = 
-          `${v.endereco || ''}${v.numero ? ', N° ' + v.numero : ''}${v.bairro ? ', ' + v.bairro : ''}, ${v.cidade || ''}, ${v.estado || ''}${v.cep ? ', CEP: ' + v.cep : ''}`;
+        const enderecoCompleto = montarEndereco(v);
         visitas.push([
           v.nome || 'Não informado',
-          enderecoCompleto || 'Não informado',
+          enderecoCompleto,
           v.cristao || 'Não informado',
           v.telefone || 'Não informado',
           formatarDataSimples(data.data)
@@ -403,15 +408,56 @@ function exportarPeriodo() {
           2: { cellWidth: 20 },    // É Cristão
           3: { cellWidth: 40 },    // Telefone
           4: { cellWidth: 30 }     // Data da Visita
-        },
-        didDrawPage: () => {
-          adicionarRodape(doc);
         }
       });
 
       doc.save(`visitantes_${dataInicio}_a_${dataFim}.pdf`);
     });
   });
+}
+
+// Funções de apoio já existentes...
+
+function adicionarCabecalho(doc, yPos, dataStr, callback) {
+  const logo = new Image();
+  logo.src = './logo.png';
+  const pageWidth = doc.internal.pageSize.getWidth();
+
+  logo.onload = () => {
+    const logoW = 60;
+    const logoH = logo.height / logo.width * logoW;
+    const x = (pageWidth - logoW) / 2;
+
+    doc.addImage(logo, 'PNG', x, yPos, logoW, logoH);
+    yPos += logoH + 5;
+
+    doc.setFontSize(12);
+    doc.setFont('helvetica', 'normal');
+    doc.text('Famílias vivendo na graça e unção do Espírito', pageWidth / 2, yPos, { align: 'center' });
+    yPos += 10;
+
+    doc.setFontSize(16);
+    doc.setFont('helvetica', 'bold');
+    doc.text('Lista de Visitantes', pageWidth / 2, yPos, { align: 'center' });
+    yPos += 8;
+
+    doc.setFontSize(12);
+    doc.text(`Período: ${dataStr}`, pageWidth / 2, yPos, { align: 'center' });
+    yPos += 10;
+
+    callback(yPos);
+  };
+}
+
+function formatarData(dataStr) {
+  const op = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+  const date = new Date(`${dataStr}T12:00:00`);
+  return date.toLocaleDateString('pt-BR', op);
+}
+
+function formatarDataSimples(dataStr) {
+  const date = new Date(`${dataStr}T12:00:00`);
+  return date.toLocaleDateString('pt-BR');
 }
 
 function adicionarCabecalho(doc, yPos, dataStr, callback) {
