--- a/push/painel.html
+++ b/push/painel.html
@@ -213,7 +213,7 @@
         formData.append('image', compressedBlob, 'imagem.jpg');
       }
 
-      const response = await fetch('send_to_all.php', {
+      const response = await fetch("https://igrejamine.x10.mx/igreja/PWA/send_to_all.php", {
         method: 'POST',
         body: formData
       });
