--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@ body {
                 <i class="fas fa-user-plus"></i>
                 <span>Gerenciar Usuários</span>
             </a>
+
+            <a href="push/notif_push.html" class="nav-item admin-only" style="display: none;">
+                <i class="fas fa-bell"></i>
+                <span>Enviar Notificações</span>
+            </a>
         </div>
     </div>
 
