--- a/push/notif_push.html
+++ b/push/notif_push.html
@@ -53,7 +53,7 @@
       // Redireciona ao login
       document.getElementById('status').innerText = 'Não autenticado. Redirecionando...';
       setTimeout(() => {
-        window.location.href = 'login.html';
+        window.location.href = '../login.html';
       }, 2000);
     }
   });
