--- a/push/notif_push.html
+++ b/push/notif_push.html
@@ -1,63 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Enviar Notificações</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <style>
-    body, html {
+    /* --- CSS copiado da lista.html --- */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      height: 100%;
+      background-color: #f4f4f4;
     }
+    nav.navbar {
+      background-color: #007bff;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: white;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    nav.navbar .logo {
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+    nav.navbar ul.menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 20px;
+    }
+    nav.navbar ul.menu li {
+      cursor: pointer;
+      padding: 5px 10px;
+      transition: background-color 0.3s ease;
+    }
+    nav.navbar ul.menu li:hover {
+      background-color: rgba(255,255,255,0.3);
+      border-radius: 4px;
+    }
+
+    /* Seu CSS original da push.html, ajustado para coexistir */
     #painelFrame {
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 56px); /* altura total menos navbar */
       border: none;
+      display: block;
     }
     .status {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      height: calc(100vh - 56px);
       font-family: Arial, sans-serif;
+      font-size: 1.2rem;
+      color: #333;
     }
   </style>
 </head>
 <body>
+  
+  <!-- Navbar copiada da lista.html -->
+  <nav class="navbar">
+    <div class="logo">Minha Aplicação</div>
+    <ul class="menu">
+      <li onclick="window.location.href='../index.html'">Pagina Inicial</li>
+    </ul>
+  </nav>
 
-<div id="status" class="status">
-  Verificando autenticação...
-</div>
+  <div id="status" class="status">
+    Verificando autenticação...
+  </div>
 
-<!-- Firebase SDK -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
-    authDomain: "cadastro-igreja-23042.firebaseapp.com",
-    projectId: "cadastro-igreja-23042",
-    appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
+      authDomain: "cadastro-igreja-23042.firebaseapp.com",
+      projectId: "cadastro-igreja-23042",
+      appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
+    };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      // Usuário autenticado, carrega o painel via iframe
-      document.body.innerHTML = `<iframe id="painelFrame" src="https://igrejamine.x10.mx/PWA/painel.html"></iframe>`;
-    } else {
-      // Redireciona ao login
-      document.getElementById('status').innerText = 'Não autenticado. Redirecionando...';
-      setTimeout(() => {
-        window.location.href = '../login.html';
-      }, 2000);
-    }
-  });
-</script>
-
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        // Usuário autenticado, substitui o conteúdo do body, exceto navbar
+        const iframeHTML = `<iframe id="painelFrame" src="https://igrejamine.x10.mx/PWA/painel.html"></iframe>`;
+        document.getElementById('status').style.display = 'none';
+        // Inserir iframe depois da navbar
+        if (!document.getElementById('painelFrame')) {
+          document.body.insertAdjacentHTML('beforeend', iframeHTML);
+        }
+      } else {
+        // Redireciona ao login
+        document.getElementById('status').innerText = 'Não autenticado. Redirecionando...';
+        setTimeout(() => {
+          window.location.href = '../login.html';
+        }, 2000);
+      }
+    });
+  </script>
 </body>
 </html>
