--- a/login.html
+++ b/login.html
@@ -1,101 +1,108 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Sistema Igreja</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login - Sistema Igreja</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- FontAwesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
   <link rel="manifest" href="/cadastro/manifest.json">
-  <meta name="theme-color" content="#4CAF50">
-
+<meta name="theme-color" content="#4CAF50">
+  
+  
+  
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #a8e6cf, #81c784);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
+  body {
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(135deg, #a8e6cf, #81c784);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .login-card {
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+    padding: 2rem;
+    max-width: 400px;
+    width: 100%;
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeInUp 0.8s forwards ease-out;
+  }
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
     }
-    .login-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
-      padding: 2rem;
-      max-width: 400px;
-      width: 100%;
-      opacity: 0;
-      transform: translateY(-20px);
-      animation: fadeInUp 0.8s forwards ease-out;
-    }
-    @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    .login-logo img {
-      max-width: 140px;
-      margin-bottom: 1rem;
-    }
-    .login-logo h3 {
-      font-weight: 600;
-      color: #4caf50;
-      margin-top: 0.5rem;
-    }
-    .form-label {
-      font-weight: 500;
-      color: #4caf50;
-    }
-    .form-control {
-      border-radius: 8px;
-    }
-    .btn-login {
-      background-color: #4caf50;
-      border: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      border-radius: 8px;
-    }
-    .btn-login:hover {
-      background-color: #43a047;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-    .footer-text {
-      text-align: center;
-      margin-top: 1rem;
-      font-size: 0.85rem;
-      color: #6c757d;
-    }
-    .alert-danger {
-      margin-top: 1rem;
-    }
-  </style>
+  }
+  .login-logo img {
+    max-width: 140px;
+    margin-bottom: 1rem;
+  }
+  .login-logo h3 {
+    font-weight: 600;
+    color: #4caf50;
+    margin-top: 0.5rem;
+  }
+  .form-label {
+    font-weight: 500;
+    color: #4caf50;
+  }
+  .form-control {
+    border-radius: 8px;
+  }
+  .btn-login {
+    background-color: #4caf50;
+    border: none;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    border-radius: 8px;
+  }
+  .btn-login:hover {
+    background-color: #43a047;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  }
+  .footer-text {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 0.85rem;
+    color: #6c757d;
+  }
+  .alert-danger {
+    margin-top: 1rem;
+  }
+</style>
 </head>
 <body>
 
 <div class="login-card">
   <div class="login-logo text-center">
-    <img src="logo.png" alt="Logo da Igreja" />
+    <img src="logo.png" alt="Logo da Igreja">
     <h3>Sistema Igreja</h3>
   </div>
 
   <form id="loginForm">
     <div class="mb-3">
       <label for="username" class="form-label">Nome de Usuário</label>
-      <input type="text" class="form-control" id="username" required placeholder="Digite seu usuário" />
+      <input type="text" class="form-control" id="username" required placeholder="Digite seu usuário">
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Senha</label>
-      <input type="password" class="form-control" id="password" required placeholder="Digite sua senha" />
+      <input type="password" class="form-control" id="password" required placeholder="Digite sua senha">
     </div>
     <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="remember" />
+      <input type="checkbox" class="form-check-input" id="remember">
       <label class="form-check-label" for="remember">Lembrar de mim</label>
     </div>
     <button type="submit" class="btn btn-success btn-login w-100">
@@ -110,9 +117,8 @@
   </div>
 </div>
 
-  <script type="module">
+<script type="module">
   import { loginUser } from './users.js';
-
   const loginForm = document.getElementById('loginForm');
   const errorMessage = document.getElementById('errorMessage');
 
@@ -124,27 +130,12 @@
 
     try {
       await loginUser(username, password);
-
       if (remember) {
         localStorage.setItem('savedUsername', username);
       } else {
         localStorage.removeItem('savedUsername');
       }
-
-      // Aguarda redirecionamento automático pelo session-timeout.js
-      // Aguarda redirecionamento automático pelo session-timeout.js ou força fallback
-setTimeout(() => {
-  const lastPage = localStorage.getItem("lastVisitedPage");
-
-  if (lastPage && lastPage !== window.location.href) {
-    // Redireciona manualmente, caso o session-timeout.js não tenha feito ainda
-    window.location.href = lastPage;
-  } else {
-    // Redirecionamento padrão
-    window.location.href = "index.html";
-  }
-}, 500);
-
+      window.location.href = 'index.html';
     } catch (error) {
       let message = 'Erro ao fazer login.';
       switch(error.message) {
@@ -175,18 +166,19 @@ setTimeout(() => {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/cadastro/service-worker.js')
-        .then(reg => {
-          console.log('Service Worker registrado:', reg.scope);
-        })
-        .catch(err => {
-          console.log('Falha ao registrar Service Worker:', err);
-        });
-    });
-  }
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/cadastro/service-worker.js')
+      .then(reg => {
+        console.log('Service Worker registrado:', reg.scope);
+      })
+      .catch(err => {
+        console.log('Falha ao registrar Service Worker:', err);
+      });
+  });
+}
 </script>
+
 
 </body>
 </html>
