--- a/presenca/frequencia.html
+++ b/presenca/frequencia.html
@@ -67,6 +67,15 @@
       transform: translateX(5px);
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
+
+     #lista-membros,
+    #lista-visitantes {
+    max-height: 600px; /* ajuste conforme necessário */
+    overflow-y: auto;
+    padding-right: 10px; /* evita corte da barra */
+  }
+
+    
   </style>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
