--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@ body {
                 <i class="fas fa-church"></i>
                 <span>Presença Cultos</span>
             </a>
+            
+            <a href="presenca/frequencia.html" class="nav-item admin-only" style="display: none;">
+                <i class="bi bi-graph-up"></i>
+                <span>Frequência Mensal</span>
+            </a>
 
             <a href="exportar.html" class="nav-item admin-only" style="display: none;">
                 <i class="fas fa-file-export"></i>
