--- a/presenca/frequencia.html
+++ b/presenca/frequencia.html
@@ -90,6 +90,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html"><i class="fas fa-home me-1"></i> Home</a>
+        </li>
+
+        
         <li class="nav-item">
           <a class="nav-link" href="lista.html">
             <i class="bi bi-people-fill me-1"></i> Cadastro de Presença no Culto
