--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body {
             </a>
             
             <a href="presenca/frequencia.html" class="nav-item admin-only" style="display: none;">
-                <i class="bi bi-graph-up"></i>
+                <i class="fas fa-chart-line"></i>
                 <span>Frequência Mensal</span>
             </a>
 
