--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -6,6 +6,7 @@
 <title>Controle de Presença - Cultos</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <style>
   .navbar { background-color: #4CAF50; z-index: 1030; }
   .navbar .nav-link, .navbar .navbar-brand { color: #fff; }
