--- a/listagem.html
+++ b/listagem.html
@@ -431,6 +431,11 @@ btnExportarPDF.addEventListener("click", async () => {
       columnStyles: {
         0: { cellWidth: 45 },  // Nome
         1: { cellWidth: 25 },  // Faixa
+        2: { cellWidth: 23 },  // nascim
+        3: { cellWidth: 17 },  // sexo
+        4: { cellWidth: 27 },  // telefone
+        5: { cellWidth: 28 },  // funcao
+        6: { cellWidth: 25 },  // batismo
         7: { cellWidth: 80 }   // Endereço
       },
       didDrawPage: function(data) {
