--- a/listagem.html
+++ b/listagem.html
@@ -422,19 +422,19 @@ btnExportarPDF.addEventListener("click", async () => {
 
     // TABELA PRINCIPAL
     doc.autoTable({
-      head: [["NOME", "FAIXA ETÁRIA", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
+      head: [["NOME", "Fx ETÁRIA", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
       body: membrosArray,
       startY: startY,
       margin: { top: 10, bottom: 15 },
       styles: { fontSize: 9 },
       headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 9, fontStyle: 'bold' },
       columnStyles: {
-        0: { cellWidth: 45 },  // Nome
-        1: { cellWidth: 25 },  // Faixa
-        2: { cellWidth: 23 },  // nascim
-        3: { cellWidth: 17 },  // sexo
+        0: { cellWidth: 47 },  // Nome
+        1: { cellWidth: 17 },  // Faixa
+        2: { cellWidth: 22 },  // nascim
+        3: { cellWidth: 18 },  // sexo
         4: { cellWidth: 27 },  // telefone
-        5: { cellWidth: 28 },  // funcao
+        5: { cellWidth: 29 },  // funcao
         6: { cellWidth: 25 },  // batismo
         7: { cellWidth: 80 }   // Endereço
       },
