--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@ if ('serviceWorker' in navigator) {
 }
 </script>
 
+<!-- Logoff após inatividade -->
+<script type="module" src="js/session-timeout.js"></script>
+  
+    
     
 <script>
 // Escuta mensagens do Service Worker com a URL clicada na notificação
