--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -6,6 +6,7 @@
   <title>Carteirinhas de Membros</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -67,16 +68,27 @@
     const lista = document.getElementById('membersList');
     const preview = document.getElementById('cardPreview');
 
-    db.ref('membros').once('value', snapshot => {
-      snapshot.forEach(child => {
-        const m = { id: child.key, ...child.val() };
-        membros.push(m);
-        lista.innerHTML += `<div class='list-group-item'>
-          <input type='checkbox' value='${m.id}' onchange='selecionar(this)'>
-          ${m.nome} - ${m.funcao || ''}
-        </div>`;
-      });
+    firebase.auth().onAuthStateChanged((user) => {
+      if (user) {
+        carregarMembros();
+      } else {
+        alert("Você precisa estar logado para acessar as carteirinhas.");
+        window.location.href = "../index.html";
+      }
     });
+
+    function carregarMembros() {
+      db.ref('membros').once('value', snapshot => {
+        snapshot.forEach(child => {
+          const m = { id: child.key, ...child.val() };
+          membros.push(m);
+          lista.innerHTML += `<div class='list-group-item'>
+            <input type='checkbox' value='${m.id}' onchange='selecionar(this)'>
+            ${m.nome} - ${m.funcao || ''}
+          </div>`;
+        });
+      });
+    }
 
     function selecionar(cb) {
       if (cb.checked) selecionados.push(cb.value);
