--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -15,7 +15,7 @@
       position: relative;
       width: 19cm;
       height: 6.5cm;
-      background-image: url('../img/Carteirinha.png');
+      background-image: url('../img/carteirinha.png');
       background-size: cover;
       margin-bottom: 1cm;
       page-break-after: always;
