--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -15,16 +15,24 @@
       position: relative;
       width: 19cm;
       height: 6.5cm;
-      background-image: url('../img/carteirinha.png');
-      background-size: cover;
       margin-bottom: 1cm;
       page-break-after: always;
+      overflow: hidden;
+    }
+    .carteirinha img.fundo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
     }
     .info {
       position: absolute;
       color: #000;
       font-size: 12pt;
       font-family: Arial, sans-serif;
+      z-index: 1;
     }
     .nome { top: 3.3cm; left: 1cm; width: 7cm; }
     .rg { top: 4.1cm; left: 1cm; width: 7cm; }
@@ -40,6 +48,7 @@
       object-fit: cover;
       border-radius: 4px;
       position: absolute;
+      z-index: 1;
     }
   </style>
 </head>
@@ -114,6 +123,7 @@
         const div = document.createElement('div');
         div.className = 'carteirinha';
         div.innerHTML = `
+          <img src="../img/carteirinha.png" class="fundo">
           <div class='info nome'>${m.nome || ''}</div>
           <div class='info rg'>${m.rg || ''}</div>
           <div class='info cargo'>${m.funcao || ''}</div>
@@ -128,7 +138,11 @@
       const pdf = new jspdf.jsPDF({ orientation: 'landscape', unit: 'cm', format: [19, 6.5] });
       const cards = preview.children;
       for (let i = 0; i < cards.length; i++) {
-        const canvas = await html2canvas(cards[i]);
+        const canvas = await html2canvas(cards[i], {
+          useCORS: true,
+          allowTaint: false,
+          imageTimeout: 2000
+        });
         const imgData = canvas.toDataURL('image/png');
         if (i > 0) pdf.addPage();
         pdf.addImage(imgData, 'PNG', 0, 0, 19, 6.5);
