--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -123,7 +123,7 @@
         const div = document.createElement('div');
         div.className = 'carteirinha';
         div.innerHTML = `
-          <img src="../img/carteirinha.png" class="fundo">
+          <img src="../img/teste.png" class="fundo">
           <div class='info nome'>${m.nome || ''}</div>
           <div class='info rg'>${m.rg || ''}</div>
           <div class='info cargo'>${m.funcao || ''}</div>
