--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -1,3 +1,120 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carteirinhas de Membros</title>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .carteirinha {
+      position: relative;
+      width: 19cm;
+      height: 6.5cm;
+      margin-bottom: 1cm;
+      page-break-after: always;
+      overflow: hidden;
+    }
+    .carteirinha img.fundo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+    .info {
+      position: absolute;
+      color: #000;
+      font-size: 12pt;
+      font-family: Arial, sans-serif;
+      z-index: 1;
+    }
+    .nome { top: 3.3cm; left: 1cm; width: 7cm; }
+    .rg { top: 4.1cm; left: 1cm; width: 7cm; }
+    .cargo { top: 4.9cm; left: 1cm; width: 7cm; }
+    .batismo { top: 5.7cm; left: 1cm; width: 3cm; }
+    .nascimento { top: 5.7cm; left: 4.5cm; width: 3cm; }
+    .validade { top: 5.7cm; left: 14cm; width: 4cm; }
+    .foto {
+      top: 3.2cm;
+      left: 9.3cm;
+      width: 4.5cm;
+      height: 4.7cm;
+      object-fit: cover;
+      border-radius: 4px;
+      position: absolute;
+      z-index: 1;
+    }
+  </style>
+</head>
+<body class="container py-4">
+  <h2 class="mb-3">Impressão de Carteirinhas</h2>
+  <input id="searchInput" class="form-control mb-3" placeholder="Buscar membro...">
+  <div id="membersList" class="list-group mb-3"></div>
+  <button class="btn btn-primary" onclick="gerarCarteirinhas()">Gerar PDF</button>
+  <div id="cardPreview" style="display: none;"></div>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
+      authDomain: "cadastro-igreja-23042.firebaseapp.com",
+      databaseURL: "https://cadastro-igreja-23042-default-rtdb.firebaseio.com",
+      projectId: "cadastro-igreja-23042",
+      storageBucket: "cadastro-igreja-23042.firebasestorage.app",
+      messagingSenderId: "977906864836",
+      appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
+    let membros = [];
+    let selecionados = [];
+    const lista = document.getElementById('membersList');
+    const preview = document.getElementById('cardPreview');
+
+    firebase.auth().onAuthStateChanged((user) => {
+      if (user) {
+        carregarMembros();
+      } else {
+        alert("Você precisa estar logado para acessar as carteirinhas.");
+        window.location.href = "../index.html";
+      }
+    });
+
+    function carregarMembros() {
+      db.ref('membros').once('value', snapshot => {
+        snapshot.forEach(child => {
+          const m = { id: child.key, ...child.val() };
+          membros.push(m);
+          lista.innerHTML += `<div class='list-group-item'>
+            <input type='checkbox' value='${m.id}' onchange='selecionar(this)'>
+            ${m.nome} - ${m.funcao || ''}
+          </div>`;
+        });
+      });
+    }
+
+    function selecionar(cb) {
+      if (cb.checked) selecionados.push(cb.value);
+      else selecionados = selecionados.filter(id => id !== cb.value);
+    }
+
+    document.getElementById("searchInput").addEventListener("input", function() {
+      const termo = this.value.toLowerCase();
+      lista.innerHTML = '';
+      membros.filter(m => m.nome.toLowerCase().includes(termo)).forEach(m => {
+        lista.innerHTML += `<div class='list-group-item'>
+          <input type='checkbox' value='${m.id}' onchange='selecionar(this)' ${selecionados.includes(m.id) ? 'checked' : ''}>
+          ${m.nome} - ${m.funcao || ''}
+        </div>`;
+      });
+    });
+
 async function gerarCarteirinhas() {
   preview.innerHTML = '';
   const selecionadosMembros = membros.filter(m => selecionados.includes(m.id));
@@ -83,3 +200,6 @@ async function gerarCarteirinhas() {
   
   pdf.save('carteirinhas.pdf');
 }
+  </script>
+</body>
+</html>
