--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -147,6 +147,7 @@ function getValidade() {
     
 
 // Modifique apenas a funasync function gerarCarteirinhas() {
+  async function gerarCarteirinhas() {
   preview.innerHTML = '';
   const selecionadosMembros = membros.filter(m => selecionados.includes(m.id));
   const fundoCarteirinha = "https://bcrenato.github.io/cadastro/img/carteirinha.png";
