--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -125,16 +125,19 @@ function ajustarFuncao(sexo, funcao) {
   if (sexo === 'feminino') {
     switch (funcao) {
       case 'pastor': return 'Pastora';
-      case 'missionario': return 'Missionária';
+      case 'missionario(a)': return 'Missionária';
+      case 'Missionario(a)': return 'Missionária';  
       case 'missionaria': return 'Missionária';
       case 'diacono': return 'Diaconisa';
-      case 'obreiro': return 'Obreira';
+      case 'obreiro(a)': return 'Obreira';
       case 'obreira': return 'Obreira';
       default: return funcao.charAt(0).toUpperCase() + funcao.slice(1); // mantém como está
     }
   } else { // Masculino ou não especificado
     switch (funcao) {
       case 'missionaria': return 'Missionário';
+      case 'missionario(a)': return 'Missionário';  
+      case 'Missionario(a)': return 'Missionário';    
       case 'obreira': return 'Obreiro';
       default: return funcao.charAt(0).toUpperCase() + funcao.slice(1);
     }
