--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -11,6 +11,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+
+ .navbar {
+  background-color: #4CAF50; /* verde */
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  color: #fff;
+}
+
+.navbar .nav-link:hover,
+.navbar .navbar-brand:hover {
+  color: #ddd;
+}
+
+
+    
     .carteirinha {
       position: relative;
       width: 19cm;
@@ -59,6 +76,32 @@
   <button class="btn btn-primary" onclick="gerarCarteirinhas()">Gerar PDF</button>
   <div id="cardPreview" style="display: none;"></div>
 
+<!-- 🔹 Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-birthday-cake me-2"></i>Impressão de Carteirinhas
+      </a>  
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <!-- Botão Home -->
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">
+            <i class="fas fa-home me-1"></i> Home
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div> 
+  </nav>
+
+
+
+  
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
