--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -67,6 +67,8 @@
       position: absolute;
       z-index: 1;
     }
+
+    
   </style>
 </head>
 <body class="container py-4">
@@ -324,5 +326,29 @@ function getValidade() {
   pdf.save('carteirinhas.pdf');
 }
   </script>
+
+<!-- Scripts do Bootstrap e Font Awesome -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+
+
+<style>
+  body {
+    padding-top: 70px; /* Ajuste inicial (altura padrão da navbar) */
+  }
+</style>
+
+
+<script>
+  // Ajusta dinamicamente o padding do body com base na altura da navbar
+  document.addEventListener("DOMContentLoaded", () => {
+    const navbar = document.querySelector(".navbar");
+    if (navbar) {
+      document.body.style.paddingTop = `${navbar.offsetHeight + 10}px`; // 10px extra de espaço
+    }
+  });
+</script>
+
+  
 </body>
 </html>
