--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -82,7 +82,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <i class="fas fa-birthday-cake me-2"></i>Impressão de Carteirinhas
+        <i class="fas fa-print me-2"></i>Impressão de Carteirinhas
       </a>  
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
       <ul class="navbar-nav me-auto">
         <!-- Botão Home -->
         <li class="nav-item">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" href="../index.html">
             <i class="fas fa-home me-1"></i> Home
           </a>
         </li>
