--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -82,7 +82,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <i class="fas fa-card me-2"></i>Impressão de Carteirinhas
+        <i class="fas fa-id-card me-2"></i>Impressão de Carteirinhas
       </a>  
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
