--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -51,7 +51,18 @@
       font-family: Arial, sans-serif;
       z-index: 1;
     }
-    .nome { top: 2.9cm; left: 1cm; width: 6.85cm; }
+   .nome { 
+  top: 2.9cm; 
+  left: 1cm; 
+  width: 6.85cm; 
+  font-size: 11pt; 
+  line-height: 1.0;          /* Espaço mais compacto entre linhas */
+  white-space: normal;       /* Permite quebra automática */
+  word-wrap: break-word;     /* Quebra palavras longas se necessário */
+  hyphens: auto;             /* Hifeniza palavras quando quebram */
+  overflow-wrap: break-word; /* Compatível com navegadores mais recentes */
+  text-align: left;          /* Mantém alinhamento limpo à esquerda */
+}
     .rg { top: 4.1cm; left: 1cm; width: 7cm; }
     .cargo { top: 4.75cm; left: 1.5cm; width: 7cm; }
     .batismo { top: 5.7cm; left: 1cm; width: 3cm; }
