--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -54,12 +54,12 @@
    .nome { 
   top: 2.9cm; 
   left: 1cm; 
-  width: 6.85cm; 
-  font-size: 11pt; 
+  width: 6.75cm; 
+  font-size: 10pt; 
   line-height: 1.0;          /* Espaço mais compacto entre linhas */
   white-space: normal;       /* Permite quebra automática */
   word-wrap: break-word;     /* Quebra palavras longas se necessário */
-  hyphens: auto;             /* Hifeniza palavras quando quebram */
+   /* hyphens: auto;             /* Hifeniza palavras quando quebram */
   overflow-wrap: break-word; /* Compatível com navegadores mais recentes */
   text-align: left;          /* Mantém alinhamento limpo à esquerda */
 }
