--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -54,14 +54,14 @@
    .nome { 
   top: 2.9cm; 
   left: 1cm; 
-  width: 6.75cm; 
-  font-size: 10pt; 
-  line-height: 1.0;          /* Espaço mais compacto entre linhas */
-  white-space: normal;       /* Permite quebra automática */
-  word-wrap: break-word;     /* Quebra palavras longas se necessário */
-   /* hyphens: auto;             /* Hifeniza palavras quando quebram */
-  overflow-wrap: break-word; /* Compatível com navegadores mais recentes */
-  text-align: left;          /* Mantém alinhamento limpo à esquerda */
+  width: 6.85cm; 
+  font-size: 11pt; 
+  line-height: 1;              /* Espaçamento entre linhas compacto */
+  white-space: normal;         /* Permite quebra de linha automática */
+  word-wrap: break-word;       /* Quebra palavras longas se necessário */
+  overflow-wrap: break-word;   /* Suporte adicional para navegadores modernos */
+  hyphens: none;               /* Remove hifenização automática */
+  text-align: justify;         /* Justifica o texto até o final do campo */
 }
     .rg { top: 4.1cm; left: 1cm; width: 7cm; }
     .cargo { top: 4.75cm; left: 1.5cm; width: 7cm; }
