--- a/carteirinhas/carteirinha.html
+++ b/carteirinhas/carteirinha.html
@@ -63,8 +63,9 @@
   overflow-wrap: break-word;   /* Suporte adicional para navegadores modernos */
   hyphens: none;               /* Remove hifenização automática */
   text-align: justify;         /* Justifica o texto até o final do campo */
+  
   display: flex;               /* Flex para centralizar conteúdo */
-  justify-content: center;     /* Centraliza horizontalmente quando uma linha */
+  /*justify-content: center;     /* Centraliza horizontalmente quando uma linha */
   align-items: center;         /* Centraliza verticalmente */
 }
     .rg { top: 4.1cm; left: 1cm; width: 7cm; }
